--- a/Initial_XGB_2_Additional_Features_Paratmeter_Tuning.ipynb
+++ b/Initial_XGB_2_Additional_Features_Paratmeter_Tuning.ipynb
@@ -1569,6 +1569,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2                        children_preschool\n",
+       "3                           children_school\n",
+       "4      raion_build_count_with_material_info\n",
+       "5                            metro_min_walk\n",
+       "6                  railroad_station_walk_km\n",
+       "7               public_transport_station_km\n",
+       "8                            cafe_count_500\n",
+       "9                           cafe_count_1000\n",
+       "10                          cafe_count_1500\n",
+       "11                          cafe_count_2000\n",
+       "12                          cafe_count_3000\n",
+       "13                          cafe_count_5000\n",
+       "14                                 full_all\n",
+       "15                                 work_all\n",
+       "16                                16_29_all\n",
+       "17                       cafe_avg_price_500\n",
+       "18                                ekder_all\n",
+       "19                                young_all\n",
+       "20                                 0_13_all\n",
+       "21                                 0_17_all\n",
+       "22                      cafe_avg_price_5000\n",
+       "23                                  0_6_all\n",
+       "24                      cafe_avg_price_3000\n",
+       "25                                 7_14_all\n",
+       "26                      cafe_avg_price_2000\n",
+       "27                      cafe_avg_price_1500\n",
+       "28                      cafe_avg_price_1000\n",
+       "29                                0_13_male\n",
+       "30                               young_male\n",
+       "31                    build_count_1946-1970\n",
+       "32                             young_female\n",
+       "33                               kremlin_km\n",
+       "34                              0_13_female\n",
+       "35                           bulvar_ring_km\n",
+       "36                                0_17_male\n",
+       "37                                     year\n",
+       "38              cafe_sum_5000_max_price_avg\n",
+       "39                              0_17_female\n",
+       "40    raion_build_count_with_builddate_info\n",
+       "41                               sadovoe_km\n",
+       "42                                   male_f\n",
+       "43              cafe_sum_3000_max_price_avg\n",
+       "44              cafe_sum_1500_max_price_avg\n",
+       "45                             16_29_female\n",
+       "46              cafe_sum_2000_max_price_avg\n",
+       "47                                 0_6_male\n",
+       "48               cafe_count_5000_price_1500\n",
+       "49                               build_year\n",
+       "50                cafe_count_5000_price_500\n",
+       "51              cafe_sum_1000_max_price_avg\n",
+       "52                             ekder_female\n",
+       "53                                   ttk_km\n",
+       "54                                7_14_male\n",
+       "55                                school_km\n",
+       "56                               16_29_male\n",
+       "57               cafe_count_5000_price_2500\n",
+       "58               cafe_count_3000_price_1500\n",
+       "59                        office_count_5000\n",
+       "60                                       of\n",
+       "61                              u'life_sq',\n",
+       "Name: ReduceVIF fit, dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output=pd.read_table(\"output.txt\").iloc[2:62]\n",
+    "output['ReduceVIF fit'].apply(lambda x: x.split(' ')[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {
     "collapsed": false,
@@ -1578,9 +1661,11 @@
    "outputs": [],
    "source": [
     "original_feats=pd.read_csv('./input/train.csv').drop(['price_doc','id','timestamp'],axis=1).columns\n",
-    "original_feats_toDrop=['cafe_count_5000_price_2500', 'cafe_count_5000_price_1500',\\\n",
-    "                      'church_count_5000', 'cafe_count_5000_price_4000',\n",
-    "                      'leisure_count_5000', 'sport_count_5000', 'big_church_count_5000']\n",
+    "original_feats_toDrop=['raion_popul', 'children_preschool', 'children_school', 'raion_build_count_with_material_info'\\\n",
+    "                      'metro_min_walk', 'railroad_station_walk_km', 'public_transport_station_km', 'cafe_count_500',\\\n",
+    "                      'cafe_count_1000', 'cafe_count_1500', 'cafe_count_2000', 'cafe_count_3000',\\\n",
+    "                       'cafe_count_5000', 'full_all', '', '',\\ \n",
+    "                      ]\n",
     "original_feats=[i for i in original_feats if i not in original_feats_toDrop]\n",
     "\n",
     "additional_feats=[\"month_of_year\",\"week_of_year\", \"day_of_month\", \"day_of_week\", \\\n",
@@ -1601,7 +1686,9 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
