--- a/Latest_Iteration_MultiplierTuning_2.ipynb
+++ b/Latest_Iteration_MultiplierTuning_2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -33,34 +33,25 @@
    "outputs": [],
    "source": [
     "# Parameters\n",
-    "micro_humility_factor = 1     #    range from 0 (complete humility) to 1 (no humility)\n",
+    "micro_humility_factor = .875     #    range from 0 (complete humility) to 1 (no humility)\n",
     "macro_humility_factor = 0.965\n",
     "jason_weight = .2\n",
     "bruno_weight = .2\n",
     "reynaldo_weight = 1 - jason_weight - bruno_weight\n",
     "seed1 = 5\n",
-    "seed2 = 48\n",
-    "seed3 = 123"
+    "seed2 = 5\n",
+    "seed3 = 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
-      "  from pandas.core import datetools\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get ready for lots of annoying deprecation warnings\n",
     "import statsmodels.api as sm"
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -97,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -131,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -162,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -175,7 +166,7 @@
        "6593788.9177278513"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -236,7 +227,7 @@
        "7773440.7512406502"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -265,7 +256,7 @@
        "6631881.8293717252"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -379,7 +370,7 @@
        "4  30478  4970532.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -571,7 +562,7 @@
        "6848545.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -629,27 +620,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5731143.5</td>\n",
+       "      <td>5548605.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8257180.0</td>\n",
+       "      <td>8466520.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5471640.0</td>\n",
+       "      <td>5481566.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5956860.5</td>\n",
+       "      <td>5629051.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>5218863.5</td>\n",
+       "      <td>5264548.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -657,14 +648,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5731143.5\n",
-       "1  30475  8257180.0\n",
-       "2  30476  5471640.0\n",
-       "3  30477  5956860.5\n",
-       "4  30478  5218863.5"
+       "0  30474  5548605.0\n",
+       "1  30475  8466520.0\n",
+       "2  30476  5481566.5\n",
+       "3  30477  5629051.0\n",
+       "4  30478  5264548.5"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -727,10 +718,10 @@
     {
      "data": {
       "text/plain": [
-       "6875100.5"
+       "6867420.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -797,27 +788,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5677124.5</td>\n",
+       "      <td>5522187.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8297705.0</td>\n",
+       "      <td>8077244.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5341318.0</td>\n",
+       "      <td>5338578.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5581285.5</td>\n",
+       "      <td>5637760.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4886457.0</td>\n",
+       "      <td>5038952.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -825,14 +816,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5677124.5\n",
-       "1  30475  8297705.0\n",
-       "2  30476  5341318.0\n",
-       "3  30477  5581285.5\n",
-       "4  30478  4886457.0"
+       "0  30474  5522187.0\n",
+       "1  30475  8077244.0\n",
+       "2  30476  5338578.0\n",
+       "3  30477  5637760.0\n",
+       "4  30478  5038952.5"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -953,10 +944,10 @@
     {
      "data": {
       "text/plain": [
-       "6768834.5"
+       "6774162.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1014,27 +1005,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5700490.0</td>\n",
+       "      <td>5560001.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8234281.5</td>\n",
+       "      <td>8314010.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5470529.0</td>\n",
+       "      <td>5475916.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5857725.5</td>\n",
+       "      <td>5673535.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>5100650.0</td>\n",
+       "      <td>5159003.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1042,14 +1033,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5700490.0\n",
-       "1  30475  8234281.5\n",
-       "2  30476  5470529.0\n",
-       "3  30477  5857725.5\n",
-       "4  30478  5100650.0"
+       "0  30474  5560001.0\n",
+       "1  30475  8314010.0\n",
+       "2  30476  5475916.0\n",
+       "3  30477  5673535.0\n",
+       "4  30478  5159003.5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1084,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1120,27 +1111,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5487804.0</td>\n",
+       "      <td>5497096.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8021281.5</td>\n",
+       "      <td>7904254.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5259461.5</td>\n",
+       "      <td>5421997.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5644107.0</td>\n",
+       "      <td>5598320.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4892833.5</td>\n",
+       "      <td>5137935.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1148,14 +1139,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5487804.0\n",
-       "1  30475  8021281.5\n",
-       "2  30476  5259461.5\n",
-       "3  30477  5644107.0\n",
-       "4  30478  4892833.5"
+       "0  30474  5497096.5\n",
+       "1  30475  7904254.0\n",
+       "2  30476  5421997.0\n",
+       "3  30477  5598320.5\n",
+       "4  30478  5137935.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1186,7 +1177,7 @@
    },
    "outputs": [],
    "source": [
-    "sub.to_csv('submission_jun12_4_Seed5_48_123_microHumanilityPt1_Latest_Iteration_2.csv', index=False)"
+    "sub.to_csv('submission_jun13_5_Seed5_microHumanilityPt875_Latest_Iteration_2.csv', index=False)"
    ]
   },
   {
