--- a/Initial_XGB_2_Additional_Features_Paratmeter_Tuning.ipynb
+++ b/Initial_XGB_2_Additional_Features_Paratmeter_Tuning.ipynb
@@ -2,13 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/sklearn/grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -47,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -71,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -108,7 +119,7 @@
        "Name: state, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -271,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -285,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -304,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -319,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1362,7 +1373,7 @@
        "10971  55.682829  37.416212  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1377,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1390,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1404,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1466,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1479,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1492,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1534,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1547,7 +1558,7 @@
        "(30033, 343)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1558,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1587,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1600,7 +1611,7 @@
        "(259, 231, 28)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1649,18 +1660,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-rmse:4.9421e+06\ttest-rmse:5.01938e+06\n",
+      "[50]\ttrain-rmse:213280\ttest-rmse:693969\n",
+      "[100]\ttrain-rmse:144777\ttest-rmse:688737\n",
+      "[150]\ttrain-rmse:112838\ttest-rmse:685716\n",
+      "[200]\ttrain-rmse:92326.3\ttest-rmse:685041\n",
+      "[250]\ttrain-rmse:78023.6\ttest-rmse:684818\n",
+      "[300]\ttrain-rmse:66748.5\ttest-rmse:684882\n",
+      "[350]\ttrain-rmse:57763.7\ttest-rmse:684736\n",
+      "[400]\ttrain-rmse:50730.5\ttest-rmse:684638\n",
+      "[450]\ttrain-rmse:44746.1\ttest-rmse:684387\n",
+      "[500]\ttrain-rmse:39913.5\ttest-rmse:684320\n",
+      "[550]\ttrain-rmse:35396.2\ttest-rmse:684360\n",
+      "[600]\ttrain-rmse:31767\ttest-rmse:684389\n",
+      "[650]\ttrain-rmse:28541.7\ttest-rmse:684371\n",
+      "[700]\ttrain-rmse:25747.3\ttest-rmse:684422\n",
+      "[750]\ttrain-rmse:23238.6\ttest-rmse:684479\n",
+      "[800]\ttrain-rmse:20982.2\ttest-rmse:684416\n",
+      "[850]\ttrain-rmse:19065.2\ttest-rmse:684449\n",
+      "[900]\ttrain-rmse:17303.5\ttest-rmse:684383\n",
+      "[950]\ttrain-rmse:15757\ttest-rmse:684370\n",
+      "[1000]\ttrain-rmse:14382.1\ttest-rmse:684342\n",
+      "[1050]\ttrain-rmse:13124.1\ttest-rmse:684318\n",
+      "[1100]\ttrain-rmse:12010.1\ttest-rmse:684302\n",
+      "[1150]\ttrain-rmse:11024.1\ttest-rmse:684273\n",
+      "[1200]\ttrain-rmse:10136.1\ttest-rmse:684256\n",
+      "[1250]\ttrain-rmse:9298.74\ttest-rmse:684246\n",
+      "[1300]\ttrain-rmse:8528.2\ttest-rmse:684253\n",
+      "[1350]\ttrain-rmse:7860.94\ttest-rmse:684261\n",
+      "[1400]\ttrain-rmse:7260.38\ttest-rmse:684265\n",
+      "[1450]\ttrain-rmse:6707.13\ttest-rmse:684259\n",
+      "[1500]\ttrain-rmse:6210.77\ttest-rmse:684258\n",
+      "[1550]\ttrain-rmse:5737.03\ttest-rmse:684256\n",
+      "[1600]\ttrain-rmse:5315.74\ttest-rmse:684241\n",
+      "[1650]\ttrain-rmse:4911.04\ttest-rmse:684237\n",
+      "[1700]\ttrain-rmse:4565.62\ttest-rmse:684242\n",
+      "[1750]\ttrain-rmse:4216.55\ttest-rmse:684236\n",
+      "[1800]\ttrain-rmse:3921.41\ttest-rmse:684231\n",
+      "[1850]\ttrain-rmse:3648.2\ttest-rmse:684225\n",
+      "[1900]\ttrain-rmse:3394.88\ttest-rmse:684227\n",
+      "[1950]\ttrain-rmse:3171.6\ttest-rmse:684240\n",
+      "[2000]\ttrain-rmse:2954.96\ttest-rmse:684241\n",
+      "[2050]\ttrain-rmse:2751.34\ttest-rmse:684241\n",
+      "[2100]\ttrain-rmse:2566.42\ttest-rmse:684245\n",
+      "[2150]\ttrain-rmse:2400.76\ttest-rmse:684241\n",
+      "[2200]\ttrain-rmse:2237.38\ttest-rmse:684247\n",
+      "[2250]\ttrain-rmse:2090.33\ttest-rmse:684249\n",
+      "[2300]\ttrain-rmse:1960.85\ttest-rmse:684248\n",
+      "[2350]\ttrain-rmse:1832.38\ttest-rmse:684250\n",
+      "[2400]\ttrain-rmse:1716.8\ttest-rmse:684251\n",
+      "[2450]\ttrain-rmse:1604.45\ttest-rmse:684252\n",
+      "[2500]\ttrain-rmse:1499.66\ttest-rmse:684251\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-681c28daabe1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m cv_output = xgb.cv(xgb_params, dtrain, num_boost_round=5000, #early_stopping_rounds=20,\\\n\u001b[0;32m---> 20\u001b[0;31m     verbose_eval=50, show_stdv=False)\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0mcv_output\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'train-rmse-mean'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'test-rmse-mean'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/jingguo/Library/Python/2.7/lib/python/site-packages/xgboost-0.6-py2.7.egg/xgboost/training.pyc\u001b[0m in \u001b[0;36mcv\u001b[0;34m(params, dtrain, num_boost_round, nfold, stratified, folds, metrics, obj, feval, maximize, early_stopping_rounds, fpreproc, as_pandas, verbose_eval, show_stdv, seed, callbacks, shuffle)\u001b[0m\n\u001b[1;32m    405\u001b[0m                            evaluation_result_list=None))\n\u001b[1;32m    406\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mfold\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcvfolds\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 407\u001b[0;31m             \u001b[0mfold\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    408\u001b[0m         \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maggcv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeval\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcvfolds\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    409\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/jingguo/Library/Python/2.7/lib/python/site-packages/xgboost-0.6-py2.7.egg/xgboost/training.pyc\u001b[0m in \u001b[0;36mupdate\u001b[0;34m(self, iteration, fobj)\u001b[0m\n\u001b[1;32m    216\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miteration\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    217\u001b[0m         \u001b[0;34m\"\"\"\"Update the boosters for one iteration\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 218\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miteration\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    219\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miteration\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/jingguo/Library/Python/2.7/lib/python/site-packages/xgboost-0.6-py2.7.egg/xgboost/core.pyc\u001b[0m in \u001b[0;36mupdate\u001b[0;34m(self, dtrain, iteration, fobj)\u001b[0m\n\u001b[1;32m    817\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    818\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mfobj\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 819\u001b[0;31m             \u001b[0m_check_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_LIB\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mXGBoosterUpdateOneIter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miteration\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    820\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    821\u001b[0m             \u001b[0mpred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtrain\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "xgb_params = {\n",
-    "    'eta': 0.1,\n",
+    "    'eta': .5,\n",
     "    'max_depth': 5,\n",
     "    'subsample': 0.8,\n",
     "    'reg_alpha': 0,\n",
-    "    'min_child_weight':3,\n",
+    "    'min_child_weight':1,\n",
     "    'colsample_bytree': 0.8,\n",
     "    'objective': 'reg:linear',\n",
     "    'eval_metric': 'rmse',\n",
@@ -1673,7 +1759,7 @@
     "dtrain = xgb.DMatrix(X_train, y_train)\n",
     "dtest = xgb.DMatrix(X_test)\n",
     "\n",
-    "cv_output = xgb.cv(xgb_params, dtrain, num_boost_round=1000, #early_stopping_rounds=20,\\\n",
+    "cv_output = xgb.cv(xgb_params, dtrain, num_boost_round=5000, #early_stopping_rounds=20,\\\n",
     "    verbose_eval=50, show_stdv=False)\n",
     "cv_output[['train-rmse-mean', 'test-rmse-mean']].plot()"
    ]
@@ -1702,7 +1788,7 @@
    ],
    "source": [
     "t0=time()\n",
-    "xgbreg1 = xgb.XGBRegressor(learning_rate=.1, n_estimators=140, max_depth=5, gamma=0, \\\n",
+    "xgbreg1 = xgb.XGBRegressor(learning_rate=1, n_estimators=140, max_depth=5, gamma=0, \\\n",
     "                          subsample=.8, colsample_bytree=.8,nthread=-1,scale_pos_weight=1)\n",
     "param_grid = {\n",
     "       'max_depth': np.arange(3,10,2),\n",
